<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobile Ledger</string>

    <!--Title Strings-->
    <string name="title_login">Log In</string>
    <string name="title_registerAccount">New Account</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="options_title_settings">Settings</string>
    <string name="options_title_accounts">Accounts</string>
    <string name="options_title_transactions">Transactions</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_Transactions">Transactions</string>

    <!--Button/ Action Strings-->
    <string name="btn_submit">Submit</string>
    <string name="btn_register">Register</string>
    <string name="btn_save">Save</string>
    <string name="action_get_account">Register an account</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_account">Add Account</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>

    <!--Hint Strings-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_account_icon_desc">Account type icon</string>
    <string name="hint_account_name">Account Name</string>
    <string name="hint_balance_amount">$0.00</string>
    <string name="hint_account_notes">Notes</string>
    <string name="hint_description">description</string>
    <string name="hint_payee">payee</string>
    <string name="hint_date">2020–01–01</string>
    <string name="hint_time">00:00</string>
    <string name="hint_other_category">Other Category…</string>
    <string name="hint_other_type">Other Type…</string>

    <!--Autofill Hints-->
    <string name="AUTOFILL_HINT_EMAIL_ADDRESS">emailAddress</string>
    <string name="AUTOFILL_HINT_NEW_PASSWORD">newPassword</string>
    <string name="AUTOFILL_HINT_PASSWORD">password</string>
    <string name="AUTOFILL_HINT_PERSON_NAME_GIVEN">personGivenName</string>
    <string name="AUTOFILL_HINT_PERSON_NAME_FAMILY">personFamilyName</string>

    <!--Error Message Strings-->
    <string name="error_email">You must enter a valid email address</string>
    <string name="error_password">Password cannot be blank</string>
    <string name="error_newPassword">Password should be atleast 8 characters</string>
    <string name="error_login">Bad login credentials</string>
    <string name="error_network">Cannot communicate with database</string>
    <string name="error_registration">Email already in user</string>
    <string name="error_blank_firstname">First name is required</string>
    <string name="error_blank_lastname">Last name is required</string>
    <string name="error_blank_account_name">Account Name cannot be blank</string>

    <!--Dialog Strings-->
    <string name="dialog_delete_title">Delete Confirmation</string>
    <string name="dialog_delete_account_prompt">Are you sure you want to delete this account?</string>
    <string name="dialog_delete_transaction_prompt">Are you sure you want to delete this transaction?</string>

    <!--Blank Notice Strings-->
    <string name="blank_accounts">You have no open accounts</string>
    <string name="blank_transactions">You have no transactions</string>
    <string name="blank_account_transactions">You have no transactions for this account</string>

    <!--Date template String-->
    <string name="pick_date">%1$d-%2$d-%3$d</string>
    <string name="pick_time">%1$d:%2$d</string>
</resources>
