<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/oldAccountFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.NewAccountFragment">

    <EditText
        android:id="@+id/newAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/form_margin_title"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_account_name"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/newAccountBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAccountName"
        android:layout_margin="@dimen/form_margin_body"
        android:ems="10"
        android:hint="@string/hint_balance_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/newAccountTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAccountBalance"
        android:layout_margin="@dimen/form_margin_body" />

    <EditText
        android:id="@+id/newAccountNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAccountTypeSpinner"
        android:layout_margin="@dimen/form_margin_body"
        android:ems="10"
        android:hint="@string/hint_account_notes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnNewAccountSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_side_margin"
        android:text="@string/btn_save" />

</RelativeLayout>