<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.NewTransactionFragment">

    <Spinner
        android:id="@+id/newAccountNameSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/form_margin_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <TextView
        android:id="@+id/newTransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAccountNameSpinner"
        android:layout_margin="@dimen/form_margin_body"
        android:background="?attr/editTextBackground"
        android:ems="8"
        android:hint="@string/hint_date"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

    <TextView
        android:id="@+id/newTransactionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAccountNameSpinner"
        android:layout_margin="@dimen/form_margin_body"
        android:layout_toEndOf="@id/newTransactionDate"
        android:background="?attr/editTextBackground"
        android:ems="5"
        android:hint="@string/hint_time"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

    <EditText
        android:id="@+id/newTransactionPayee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTransactionDate"
        android:layout_margin="@dimen/form_margin_body"
        android:ems="10"
        android:hint="@string/hint_payee"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <EditText
        android:id="@+id/newTransactionDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTransactionPayee"
        android:layout_margin="@dimen/form_margin_body"
        android:ems="10"
        android:hint="@string/hint_description"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <EditText
        android:id="@+id/newTransactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTransactionDesc"
        android:layout_margin="@dimen/form_margin_body"
        android:ems="10"
        android:hint="@string/hint_balance_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <Spinner
        android:id="@+id/newTransactionCategorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTransactionAmount"
        android:layout_margin="@dimen/form_margin_body"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <EditText
        android:id="@+id/newTransactionCustomCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTransactionCategorySpinner"
        android:layout_margin="@dimen/form_margin_body"
        android:ems="10"
        android:hint="@string/hint_other_category"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressbarNewTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnNewTransactionSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/button_side_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:text="@string/btn_save"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

</RelativeLayout>