<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="transaction"
            type="info.chorimeb.mobileLedger.data.db.entities.Transaction" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.EditTransactionFragment">

        <Spinner
            android:id="@+id/editAccountNameSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/form_margin_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <TextView
            android:id="@+id/editTransactionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editAccountNameSpinner"
            android:layout_margin="@dimen/form_margin_body"
            android:background="?attr/editTextBackground"
            android:ems="10"
            android:hint="@string/hint_date"
            android:importantForAutofill="no"
            android:text="@{transaction.paiddateString}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        <TextView
            android:id="@+id/editTransactionTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editAccountNameSpinner"
            android:layout_margin="@dimen/form_margin_body"
            android:layout_toEndOf="@id/editTransactionDate"
            android:background="?attr/editTextBackground"
            android:ems="5"
            android:hint="@string/hint_time"
            android:text="@{transaction.paidtimeString}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        <EditText
            android:id="@+id/editTransactionPayee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTransactionDate"
            android:layout_margin="@dimen/form_margin_body"
            android:ems="10"
            android:hint="@string/hint_payee"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@{transaction.payee}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <EditText
            android:id="@+id/editTransactionDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTransactionPayee"
            android:layout_margin="@dimen/form_margin_body"
            android:ems="10"
            android:hint="@string/hint_description"
            android:importantForAutofill="no"
            android:inputType="textShortMessage"
            android:text="@{transaction.description}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <EditText
            android:id="@+id/editTransactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTransactionDesc"
            android:layout_margin="@dimen/form_margin_body"
            android:ems="10"
            android:hint="@string/hint_balance_amount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal|numberSigned"
            android:text="@{transaction.amountString}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <Spinner
            android:id="@+id/editTransactionCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTransactionAmount"
            android:layout_margin="@dimen/form_margin_body"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <EditText
            android:id="@+id/editTransactionCustomCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTransactionCategorySpinner"
            android:layout_margin="@dimen/form_margin_body"
            android:ems="10"
            android:hint="@string/hint_other_category"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressbarEditTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnEditTransactionSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/button_side_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/btn_save"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

    </RelativeLayout>
</layout>